--- a/Spengergasse.MusicMetaApp/View/View_Artist.xaml
+++ b/Spengergasse.MusicMetaApp/View/View_Artist.xaml
@@ -7,7 +7,7 @@
   xmlns:local="clr-namespace:Spengergasse.MusicMetaApp.View"
   mc:Ignorable="d"
   FocusManager.FocusedElement="{Binding ElementName=NameField}"
-  Title="Artist" Height="275" Width="300">
+  Title="Edit Artist" Height="275" Width="300">
   <Grid Margin="5" VerticalAlignment="Stretch">
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="Auto" />
