--- a/Spengergasse.MusicMetaApp/View/View_Genre.xaml
+++ b/Spengergasse.MusicMetaApp/View/View_Genre.xaml
@@ -6,7 +6,7 @@
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   xmlns:local="clr-namespace:Spengergasse.MusicMetaApp"
   mc:Ignorable="d"
-  ResizeMode="CanMinimize"
+  FocusManager.FocusedElement="{Binding ElementName=NameField}"
   Title="Edit Genre" Width="300" Height="110">
   <Grid Margin="5" VerticalAlignment="Top">
     <Grid.ColumnDefinitions>
