--- a/Spengergasse.MusicMetaApp/View/View_Song.xaml
+++ b/Spengergasse.MusicMetaApp/View/View_Song.xaml
@@ -6,9 +6,8 @@
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   xmlns:local="clr-namespace:Spengergasse.MusicMetaApp.View"
   mc:Ignorable="d"
-  FocusManager.FocusedElement="{Binding ElementName=NameField}"
-  ResizeMode="CanResize"
-  Title="Edit Song" Height="230" Width="300">
+  FocusManager.FocusedElement="{Binding ElementName=TitleField}"
+  Title="Edit Song" Height="350" Width="350">
   <Grid Margin="5">
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="Auto" />
@@ -21,6 +20,8 @@
       <RowDefinition Height="Auto" />
       <RowDefinition Height="Auto" />
       <RowDefinition Height="Auto" />
+      <RowDefinition Height="*" />
+      <RowDefinition Height="Auto" />
     </Grid.RowDefinitions>
     <TextBlock Grid.Row="0" Grid.Column="0" Margin="5">Track No</TextBlock>
     <TextBox
@@ -30,8 +31,8 @@
     <TextBlock Grid.Row="1" Grid.Column="0" Margin="5">Title</TextBlock>
     <TextBox
       Margin="5" Grid.Row="1" Grid.Column="1"
-      Name="NameField"
-      Text="{Binding Path=CurrentSong.Title}" />
+      Name="TitleField"
+      Text="{Binding Path=CurrentSong.Title, UpdateSourceTrigger=PropertyChanged}" />
     <TextBlock Grid.Row="2" Grid.Column="0" Margin="5">
       Artist
     </TextBlock>
@@ -58,12 +59,38 @@
       ItemsSource="{Binding Path=AllGenre}"
       Text="{Binding Path=CurrentSong.Genre}"
       IsEditable="True" />
+    <TextBlock Grid.Row="5" Grid.Column="0" Margin="5">
+      Comments
+    </TextBlock>
+    <DataGrid
+      Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Margin="5"
+      ItemsSource="{Binding Path=CurrentComments}"
+      CanUserAddRows="True"
+      AutoGenerateColumns="False">
+      <DataGrid.Columns>
+        <DataGridTextColumn
+          Binding="{Binding Path=UserName}"
+          Header="User name" Width="Auto" />
+        <DataGridTextColumn
+          Binding="{Binding Path=Position}"
+          Header="Position" Width="Auto" />
+        <DataGridTextColumn
+          Binding="{Binding Path=Comment}"
+          Header="Comment" Width="*" />
+      </DataGrid.Columns>
+    </DataGrid>
     <StackPanel
-      Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2"
+      Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2"
       Orientation="Horizontal"
       HorizontalAlignment="Right"
       Margin="5">
-      <Button IsDefault="True" Content="Save" Margin="3" Click="Save_Click" />
+      <Button
+        IsDefault="True"
+        Content="Save"
+        Margin="3"
+        Command="{Binding Path=SaveCommand}"
+        CommandParameter="{Binding RelativeSource={RelativeSource
+          Mode=FindAncestor, AncestorType={x:Type Window}}}" />
       <Button IsCancel="True" Content="Cancel" Margin="3" />
     </StackPanel>
   </Grid>
