--- a/Spengergasse.MusicMetaApp/View/View_Album.xaml
+++ b/Spengergasse.MusicMetaApp/View/View_Album.xaml
@@ -7,13 +7,15 @@
   xmlns:local="clr-namespace:Spengergasse.MusicMetaApp"
   mc:Ignorable="d"
   FocusManager.FocusedElement="{Binding ElementName=NameField}"
-  Title="Edit Album" Width="300" Height="225">
+  Title="Edit Album" Width="300" Height="300">
   <Grid Margin="5">
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="Auto" />
       <ColumnDefinition Width="*" />
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
+      <RowDefinition Height="Auto" />
+      <RowDefinition Height="Auto" />
       <RowDefinition Height="Auto" />
       <RowDefinition Height="Auto" />
       <RowDefinition Height="*" />
@@ -42,8 +44,28 @@
       Grid.Row="2" Grid.Column="1" Margin="5"
       TextWrapping="Wrap" AcceptsReturn="True"
       Text="{Binding Path=CurrentAlbum.Description}" />
+    <TextBlock Grid.Row="3" Grid.Column="0" Margin="5">
+      Ratings
+    </TextBlock>
+    <DataGrid
+      Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="5"
+      ItemsSource="{Binding Path=CurrentRatings}"
+      CanUserAddRows="True"
+      AutoGenerateColumns="False">
+      <DataGrid.Columns>
+        <DataGridTextColumn
+          Binding="{Binding Path=UserName}"
+          Header="User name" Width="Auto" />
+        <DataGridTextColumn
+          Binding="{Binding Path=Rating}"
+          Header="Rating" Width="Auto" />
+        <DataGridTextColumn
+          Binding="{Binding Path=Comment}"
+          Header="Comment" Width="*" />
+      </DataGrid.Columns>
+    </DataGrid>
     <StackPanel
-      Grid.Row="3"
+      Grid.Row="5"
       Grid.Column="0"
       Grid.ColumnSpan="2"
       DockPanel.Dock="Bottom"
